samples/_failures_safe/1761491535_4fd1e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d2d82d8.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_3d2d82d8.c:169:13: error: expected declaration or statement at end of input
  169 |             if (right > INT_MAX - left) {
      |             ^~
./samples/SAFE/__tmp_3d2d82d8.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3d2d82d8.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3d2d82d8.c:169:13: error: expected declaration or statement at end of input
